@@ -14,7 +14,7 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
-    // WebClient 전용 (Actuator 기반 health, metric 정보 수집용)
+    // WebClient 전용 (자체 service call용)
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -22,17 +22,12 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-// 개발 테스트 전용 환경, 자바 옵션 세팅
-bootRun {
-    systemProperty "service.name", "mockup"
-    environment "HOST", "localhost"
-    environment "CONTAINER", "local-container"
-}
-
-// test 코드 실행 전용 환경, 자바 옵션 세팅
+// 테스트 코드 전용 java 옵션, 환경변수 세팅
 test {
     useJUnitPlatform()
     systemProperty "service.name", "mockup"
     environment "HOST", "localhost"
     environment "CONTAINER", "local-container"
+    environment "monitoring.token", "test-token"
+    jvmArgs += ["-XX:+EnableDynamicAgentLoading"]
 }
